// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render the Slide 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "height": "0px",
      "opacity": 0,
      "textAlign": "center",
      "transition": "width 120ms ease-in-out",
      "width": "0px",
    }
  }
/>
`;

exports[`renders the Slide horizontally 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "height": "0px",
      "opacity": 1,
      "textAlign": "center",
      "transition": "width 120ms ease-in-out",
      "width": "120px",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#EFEFEF",
      }
    }
  >
    Hello world !
  </div>
</div>
`;

exports[`renders the Slide vertically 1`] = `
<div
  style={
    Object {
      "display": "block",
      "height": "50px",
      "opacity": 1,
      "textAlign": "center",
      "transition": "height 120ms ease-in-out",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "#EFEFEF",
      }
    }
  >
    Hello world !
  </div>
</div>
`;
